src/test/06-Errors/error-auto-null3.txt
error-auto-null3.ck:2:15: error: for( X : ARRAY ) expects ARRAY to be an array
[2] for( auto x : null ) { }
                  ^
